<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="87dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/basket"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/basket" />

    <Button
        android:id="@+id/recipe"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe" />

    <Button
        android:id="@+id/research"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/research" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="424dp"
        android:layout_height="wrap_content"
        android:text="@string/smartmitton"
        android:textSize="70sp" />



</android.widget.LinearLayout>